Fix packaging of seqSample class

--- a/wgsHLAfiltRpackage/NAMESPACE
+++ b/wgsHLAfiltRpackage/NAMESPACE
@@ -5,6 +5,9 @@ export(extractor.bowtie2_align)
 export(extractor.run)
 export(filterHLA)
 export(general.paired_sample_objects)
+export(seqSample)
+exportClasses(seqSample)
+import(methods)
 importFrom(methods,setRefClass)
 importFrom(stringr,fixed)
 importFrom(stringr,str_split)
